# GtkLocalhostServer

./: Cargo.toml  build.rs
resources/: resources.gresource.xml  window.ui
src/: main.rs  style.css
src/window/: imp.rs  mod.rs
